# desbordante-core

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  COPYING  Doxyfile  README.md  README_CONSOLE.md  README_PYPI.md  SConscript  SConstruct  _config.yml  address_sanitizer_ignore_list.txt  build.bat  build.sh  check_cmake_deps.sh  clean.sh  clfm.sh  compile_commands.json  config.json  erminer_output.txt  index.md  min_fr_test.py  plans.txt  pull_datasets.sh  pyproject.toml  quick_test.py  run_experiments_seed.sh  run_tests.sh  run_tests_2.sh  sconscript.py  sconstruct.py  test.sh  test.txt  ub_sanitizer_ignore_list.txt  update_includes.py
kafka-consumer/: CMakeLists.txt  main.cpp
kafka-consumer/consumer/: BaseConsumer.h  TaskConsumer.cpp  TaskConsumer.h  consumerManager.h  consumerStart.h  processTask.h
kafka-consumer/db/: DBManager.h  TaskConfig.h  taskConfig.h
kafka-consumer/include/: json.hpp
kafka-consumer/src/: consumerStart.h  processTask.h  taskConfig.h
python_bindings/: CMakeLists.txt  bindings.cpp  create_dataframe_reader.cpp  create_dataframe_reader.h  dataframe_reader.cpp  dataframe_reader.h  get_algorithm.h  get_py_type.cpp  get_py_type.h  make_csv_parser.h  pandas_reader.cpp  pandas_reader.h  py_ac_algorithm.h  py_algorithm.cpp  py_algorithm.h  py_ar_algorithm.h  py_csv_stats.h  py_data_stats.h  py_fd.cpp  py_fd.h  py_fd_algorithm.h  py_fd_primitive.h  py_fd_verifier.h  py_metric_verifier.h  py_primitive.h  py_to_any.cpp  py_to_any.h  py_ucc.cpp  py_ucc.h  py_ucc_algorithm.h  py_ucc_verifier.h
python_bindings/examples/: dedupe.py  duplicates.csv  mine_typos.py
src/: CMakeLists.txt  TaneX.cpp  TaneX.h  main.cpp  main2.cpp  maino.cpp
src/Parser/: CSVParser.h
src/algorithms/: ACAlgorithm.cpp  ACAlgorithm.h  ARAlgorithm.cpp  ARAlgorithm.h  AlgoFactory.h  Algorithms.h  DFD.cpp  DFD.h  Depminer.cpp  Depminer.h  FDAlgorithm.cpp  FDAlgorithm.h  FUN.cpp  FUN.h  FastFDs.cpp  FastFDs.h  Fd_mine.cpp  Fd_mine.h  MetricVerifier.cpp  MetricVerifier.h  PliBasedFDAlgorithm.cpp  PliBasedFDAlgorithm.h  Primitive.cpp  Primitive.h  Pyro.cpp  Pyro.h  TaneX.cpp  TaneX.h  TypoMiner.cpp  TypoMiner.h  ac_algorithm.cpp  ac_algorithm.h  ac_exception_finder.cpp  ac_exception_finder.h  algo_factory.cpp  algo_factory.h  algorithm.cpp  algorithm.h  algorithm_types.h  algorithm_with_data.h  (+33 more)
src/caching/: CacheEvictionMethod.h  CachingMethod.h  cache_eviction_method.h  caching_method.h
src/config/: all_options.cpp  all_options.h  common_option.h  descriptions.h  ioption.h  names.h  option.h  option_using.h
src/core/: CMakeLists.txt  Configuration.h  DependencyCandidate.cpp  DependencyCandidate.h  DependencyConsumer.cpp  DependencyConsumer.h  DependencyStorage.h  DependencyStrategy.cpp  DependencyStrategy.h  FdG1Strategy.cpp  FdG1Strategy.h  KeyG1Strategy.cpp  KeyG1Strategy.h  ProfilingContext.cpp  ProfilingContext.h  SearchSpace.cpp  SearchSpace.h  VerticalInfo.h  configuration.h  dependency_candidate.h  dependency_consumer.h  dependency_storage.h  dependency_strategy.cpp  fd_g1_strategy.cpp  key_g1_strategy.cpp  key_g1_strategy.h  main.cpp  parameters.h  profiling_context.cpp  profiling_context.h  search_space.cpp  search_space.h
src/custom/: CustomHashes.h  CustomRandom.h  custom_hashes.h  custom_random.h
src/logging/: logging.conf
src/model/: AC.h  AR.h  AbstractColumnData.h  Column.cpp  Column.h  ColumnCombination.cpp  ColumnCombination.h  ColumnData.cpp  ColumnData.h  ColumnLayoutRelationData.cpp  ColumnLayoutRelationData.h  ColumnLayoutTypedRelationData.cpp  ColumnLayoutTypedRelationData.h  FD.h  Itemset.cpp  Itemset.h  PartialFD.h  PartialKey.h  RelationData.cpp  RelationData.h  RelationalSchema.cpp  RelationalSchema.h  TransactionalData.cpp  TransactionalData.h  TransactionalInputFormat.h  TypedColumnData.cpp  TypedColumnData.h  Vertical.cpp  Vertical.h  ac.h  ar.h  cfd.cpp  cfd.h  cfd_column_data.h  cfd_relation_data.cpp  cfd_relation_data.h  cfd_types.cpp  cfd_types.h  column.cpp  column.h  (+22 more)
src/parser/: CSVParser.cpp  CSVParser.h  ConfigParser.cpp  ConfigParser.h  config_parser.cpp  csv_parser.cpp  csv_parser.h
src/python_bindings/: .typos.toml  CMakeLists.txt  bind_main_classes.cpp  bind_main_classes.h  bindings.cpp  create_dataframe_reader.cpp  dataframe_reader.cpp  dataframe_reader.h  get_algorithm.h  get_py_type.cpp  opt_to_py.cpp  py_ac_ranges_collection.h  py_algorithm.cpp  py_algorithm.h  py_data_stats.cpp  py_data_stats.h  py_fd.cpp  py_fd.h  py_fd_verifier.h  py_metric_verifier.h  py_to_any.cpp  py_ucc.cpp  py_ucc.h  py_ucc_algorithm.h  py_ucc_verifier.h  test_bindings.py  test_pybind_data_stats.py
src/statistics/: CsvStats.cpp  CsvStats.h  Statistic.cpp  Statistic.h
src/structures/: agree_set_factory.cpp  agree_set_factory.h  identifier_set.h  lattice_vertex.cpp  lattice_vertex.h  position_list_index.cpp  position_list_index.h  vertical_map.cpp  vertical_map.h
src/tests/: CMakeLists.txt  Test1.cpp  TestPyro.cpp  TestTane.cpp  all_csv_configs.cpp  all_csv_configs.h  all_gfd_paths.h  all_paths.cpp  all_paths.h  all_tables_config.cpp  all_tables_config.h  csv_config_util.h  datasets.h  main.cpp  table_config.h  test_ac_algorithm.cpp  test_algo_interfaces.cpp  test_algorithm.cpp  test_apriori.cpp  test_ar_verifier.cpp  test_bitset.cpp  (+56 more)
tests/: CMakeLists.txt  Datasets.h  Test1.cpp  TestACAlgorithm.cpp  TestAlgoInterfaces.cpp  TestAlgorithm.cpp  TestApriori.cpp  TestCsvStats.cpp  TestFdMine.cpp  TestMetricVerifier.cpp  TestPyro.cpp  TestTane.cpp  TestTypedColumnData.cpp  TestTypes.cpp  TestTypoMiner.cpp  TestUtil.cpp  TestingUtils.h  datasets.h  main.cpp  test_ac_algorithm.cpp  test_algo_interfaces.cpp  test_algorithm.cpp  test_apriori.cpp  test_cfd_algos.cpp  test_cfd_relation_data.cpp  test_configuration.cpp  test_csv_stats.cpp  test_data_stats.cpp  test_fd_mine.cpp  test_fd_verifier.cpp  test_id.cpp  test_ind.cpp  test_metric_verifier.cpp  test_typed_column_data.cpp  test_typo_miner.cpp  test_ucc_algorithms.cpp  test_ucc_verifier.cpp  test_util.cpp  testing_utils.h  tmp.txt
(+3639 files in other folders)
