[build-system]
requires = ["scikit-build-core", "pybind11", "cmake>=3.25"]
build-backend = "scikit_build_core.build"

[project]
name = "desbordante"
version = "2.4.1"
description = "Science-intensive high-performance data profiler"
requires-python = ">=3.8"
readme = "README_PYPI.md"
license = { text = "AGPL-3.0-only" }

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",    
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

urls = { homepage = "https://desbordante.unidata-platform.ru/", repository = "https://github.com/desbordante/desbordante-core", issues = "https://github.com/desbordante/desbordante-core/issues" }

[tool.scikit-build.cmake.define]
DESBORDANTE_BINDINGS = "INSTALL"
DESBORDANTE_BUILD_NATIVE = "OFF"
DESBORDANTE_BUILD_TESTS = "OFF"
DESBORDANTE_UNPACK_DATASETS = "OFF"
ASAN = "OFF"
CMAKE_BUILD_TYPE = "Release"
CPM_SOURCE_CACHE = {env="CPM_SOURCE_CACHE", default = "./cmake/cpm-cache"}

[tool.scikit-build.sdist]
include = ["lib/*"]
exclude = [
    "datasets/*",
    "images/*",
    "pull_datasets.sh",
    "docs/*",
    "build.sh",
    "build.bat",
    "test_input_data/",
    "src/tests/*",
    "examples/*",
]

[tool.ruff]
select = [
    "E", "W", "F",
]

ignore = [
    "W291",
    "E501",
]

exclude = [
    ".git",
    "build/",
    "examples/notebooks/*.ipynb",
]
