[build-system]
requires = ["scikit-build-core", "pybind11", "cmake>=3.25"]
build-backend = "scikit_build_core.build"

[project]
name = "desbordante"
version = "2.4.1"
description = "Science-intensive high-performance data profiler"
requires-python = ">=3.8"
readme = "README_PYPI.md"
license = { text = "AGPL-3.0-only" }

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",    
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

urls = { homepage = "https://desbordante.unidata-platform.ru/", repository = "https://github.com/desbordante/desbordante-core", issues = "https://github.com/desbordante/desbordante-core/issues" }

[tool.scikit-build.cmake.define]
DESBORDANTE_BINDINGS = "INSTALL"
DESBORDANTE_BUILD_NATIVE = "OFF"
DESBORDANTE_BUILD_TESTS = "OFF"
DESBORDANTE_UNPACK_DATASETS = "OFF"
ASAN = "OFF"
CMAKE_BUILD_TYPE = "Release"
CPM_SOURCE_CACHE = {env="CPM_SOURCE_CACHE", default = "./cmake/cpm-cache"}

[tool.scikit-build.sdist]
include = ["lib/*"]
exclude = [
    "datasets/*",
    "images/*",
    "pull_datasets.sh",
    "docs/*",
    "build.sh",
    "build.bat",
    "test_input_data/",
    "src/tests/*",
    "examples/*",
]

[tool.typos]
[tool.typos.files]
extend-exclude = [
    "test_input_data/",
]
[tool.typos.default]
extend-ignore-re = [
    # C++ STD library
    "countr_zero",

    # Dummy strings used in tests and examples
    '"ba"',
    '"helo"',
    "abd",

    # Numerical Dependencies (ND) phrases
    "# --- ND ---",
    "// AC, ND",
    "// ND",
    "an ND",
    "clusters violating ND",
    "ND holds",
    "ND verification",
    "Weight of ND",

    # Others
    "7ND-93L",
    "BA thesis\\.pdf",
    "Comput\\. J\\.",
    "Peter J\\. Hass",
]

[tool.typos.default.extend-identifiers]
# Numerical Dependencies (ND)
bind_nd = "bind_nd"
BindNd = "BindNd"
bind_nd_verification = "bind_nd_verification"
BindNdVerification = "BindNdVerification"
kTestND = "kTestND"
MakeNdNameTuple = "MakeNdNameTuple"
nd = "nd"
ND = "ND"
nd1 = "nd1"
nd2 = "nd2"
nd_holds = "nd_holds"
NDHolds = "NDHolds"
nd_module = "nd_module"
nd_verification = "nd_verification"
nd_verification_datasets = "nd_verification_datasets"
nd_verification_module = "nd_verification_module"
nd_verifier = "nd_verifier"
NDVerifier = "NDVerifier"
NDVerifierHeavyDatasets = "NDVerifierHeavyDatasets"
NDVerifierTestNullEqualNull = "NDVerifierTestNullEqualNull"
NDVerifierTestSuite = "NDVerifierTestSuite"
NDVerifyingParams = "NDVerifyingParams"
TestND = "TestND"
test_nd_verifier = "test_nd_verifier"
TestNDVerifying = "TestNDVerifying"
VerifyND = "VerifyND"
verifying_nd = "verifying_nd"
verifying_nd_1 = "verifying_nd_1"
verifying_nd_1_output = "verifying_nd_1_output"
verifying_nd_2 = "verifying_nd_2"
verifying_nd_2_output = "verifying_nd_2_output"
verifying_nd_3 = "verifying_nd_3"
verifying_nd_3_output = "verifying_nd_3_output"

[tool.typos.type.jupyter]
extend-ignore-re = [
    '\"id":\s*"[^"\n]*"',
    '"outputs"\s*:\s*\[(\s*\{[^}]*\}(?:,\s*\{[^}]*\})*)?\s*\]'
]
